Moved check box generation into a helper.

--- a/app/views/admin/pages/_page_permissions.html.haml
+++ b/app/views/admin/pages/_page_permissions.html.haml
@@ -17,15 +17,6 @@
         %td
           = user.admin? ? 'Yes' : 'No'
         %td
-          = check_box_tag :page_create, user.can?(:create, @page), user.can?(:create, @page)
-          = hidden_field_tag :page_create, false
-          %label{:for => 'page_create'}
-            Create a subpage
-          = check_box_tag :page_destroy, user.can?(:destroy, @page), user.can?(:destroy, @page)
-          = hidden_field_tag :page_destroy, false
-          %label{:for => 'page_destroy'}
-            Destroy this page
-          = check_box_tag :page_permissions, user.can?(:permissions, @page), user.can?(:permissions, @page)
-          = hidden_field :page_permissions, false
-          %label{:for => 'page_permissions'}
-            Change permissions
+          = permission_check_box(user, @page, :create, 'Create a subpage')
+          = permission_check_box(user, @page, :destroy, 'Destroy this page')
+          = permission_check_box(user, @page, :permissions, 'Change permissions')
