Display a friendly message when the user doesn't have the required priviledges.

--- a/app/views/admin/pages/_page_permissions.html.haml
+++ b/app/views/admin/pages/_page_permissions.html.haml
@@ -1,4 +1,7 @@
 #user_page_permissions
+  - if error_message_on(@page, :permissions)
+  %div.access_denied
+    = error_message_on(@page, :permissions)
   %table.permissions
     %caption
       Page Permissions
