--- a/public/stylesheets/sass/admin/user_page.sass
+++ b/public/stylesheets/sass/admin/user_page.sass
@@ -1,4 +1,9 @@
 #user_page_permissions
+  .access_denied
+    background-color: #F3C2C2
+    color: #700
+    padding: 8px
+    margin-bottom: 5px
   margin-bottom: 15px
   table.permissions
     caption
