--- a/app/views/admin/pages/_page_permissions.html.haml
+++ b/app/views/admin/pages/_page_permissions.html.haml
@@ -1,26 +1,26 @@
 #user_page_permissions
-  - if error_message_on(@page, :permissions)
-  %div.access_denied
-    = error_message_on(@page, :permissions)
+  - unless error_message_on(@page, :permissions).empty?
+    %div.access_denied
+      = error_message_on(@page, :permissions)
   %table.permissions
     %caption
-      Page Permissions
+      = t('user_pages.admin.pages.user_page_permissions.page_permissions')
     %tr
       %th
-        Login
+        = t('user_pages.admin.pages.user_page_permissions.login')
       %th
-        Administrator?
+        = t('user_pages.admin.pages.user_page_permissions.administrator_p')
       %th
-        Permissions
+        = t('user_pages.admin.pages.user_page_permissions.permissions')
     - User.all.each do |user|
       %tr
         %td
           = user.name
           = "(#{user.login})"
         %td
-          = user.admin? ? 'Yes' : 'No'
+          = user.admin? ? t('yes') : t('no')
         %td
-          = permission_check_box(user, @page, :create, 'Create a subpage')
-          = permission_check_box(user, @page, :destroy, 'Destroy this page')
-          = permission_check_box(user, @page, :update, 'Update this page')
-          = permission_check_box(user, @page, :permissions, 'Change permissions')
+          = permission_check_box(user, @page, :create, t('user_pages.admin.pages.user_page_permissions.create'))
+          = permission_check_box(user, @page, :destroy, t('user_pages.admin.pages.user_page_permissions.destroy'))
+          = permission_check_box(user, @page, :update, t('user_pages.admin.pages.user_page_permissions.update'))
+          = permission_check_box(user, @page, :permissions, t('user_pages.admin.pages.user_page_permissions.permissions'))
